# DRS4bin2root

./: .gitignore  CMakeLists.txt  Makefile  README.md  read_v5.3.cpp
ana/: ChannelReader.h  simpAna.cpp
ana/drawWaveform/: ChannelReader.h  drawWaveform.cpp  run_drawWaveform.sh
ana/find-peaks/: example.cpp
ana/waveAna/: ChannelReader.cpp  ChannelReader.h  pulseArea.cpp  simpAna.cpp
